# warehouse

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.ydml  README.md  environment.yml  setup.cfg  test.csv
environments/: dev.yml  run.yml
example_data/: 2015-01-01_sWGA_SWJS032_MIS2024_BatchA.xlsx  2015-01-05_sWGA_SWFW094_MIS2024_BatchB.xlsx  2024-01-01_sWGA_SWJS032_MIS2024_BatchA.xlsx  2024-01-05_sWGA_SWFW094_MIS2024_BatchB.xlsx  2024-01-10_PCR_PCTB142_CoRE_BatchA and B.xlsx  2024-01-15_SeqLib_SLJS034_MIS2024_BatchA and B.xlsx  example_seqfolders.ini
example_data/With Errors/: 2024-02-04_sWGA_SWJS044_MIS2024_BatchF.xlsx  2024-02-05_PCR_PCTB150_MIS2024_BatchF.xlsx  2024-02-06_SeqLib_SLJS038_MIS2024_BatchF.xlsx
example_data/experimental/: 2024-01-01_sWGA_SWJS032_NOMADS_BatchB.xlsx  2024-01-05_sWGA_SWFW094_NOMADS_BatchC.xlsx  2024-01-05_sWGA_SWFW094_Project A_BatchC.xlsx  2024-01-10_PCR_PCTB142_NOMADS_BatchAB.xlsm  2024-01-10_PCR_PCTB142_NOMADS_BatchAB.xlsx  2024-01-11_PCR_PCTB143_NOMADS_BatchC.xlsx  2024-01-11_PCR_PCTB143_Project A_BatchC.xlsm  2024-01-15_SeqLib_SLJS034_NOMADS_BatchBC.xlsx  2024-01-15_SeqLib_SLJS034_Project A_BatchBC.xlsx  2024-01-20_SeqLib_SLJS035_NOMADS_BatchBC.xlsx  (+2 more)
example_data/nomadic/: nmec.ini
inventory/: assays.txt  experiments.txt  sample_sets.txt
metadata/: sample_info_example.csv
notebooks/: Variants.ipynb
scripts/: warehouse.py
templates/: Gel Labelling.pptx  NOMADS_Library_Ligation_Worksheet.xlsx  NOMADS_Library_Rapid_Worksheet.xlsx  NOMADS_PCR_Worksheet.xlsm  NOMADS_PCR_Worksheet.xlsx  NOMADS_sWGA_Worksheet.xlsx
(+156 files in other folders)
