[metadata]
name = warehouse
version = 0.1.0-beta
description = Standardisation, aggregation and visualisation of NOMADS nanopore data for genomic surveillance
author = Daniel J Bridges
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    warehouse
install_requires =
    click
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
	warehouse = warehouse.warehouse:cli

[flake8]
max-line-length = 88
